# reaction_network

./: .gitignore  .gitmodules  BoundaryConditions.cpp  BoundaryConditions.hpp  BoundaryConditions1D.cpp  BoundaryConditions1D.hpp  Bvp2D_test  BvpOde.cpp  BvpOde.hpp  BvpOde1D.cpp  BvpOde1D.hpp  CMakeLists.txt  FiniteDifferenceGrid.cpp  FiniteDifferenceGrid.hpp  FiniteDifferenceGrid1D.cpp  FiniteDifferenceGrid1D.hpp  FiniteDifferenceGrid2D.cpp  FiniteDifferenceGrid2D.hpp  LinearSolver.cpp  Node.hpp  Node1D.hpp  Node2D.hpp  OdeSolver.cpp  OdeSolver.hpp  README.md  Runge-Kutta.cpp  SecondOrderOde.hpp  SecondOrderOde1D.hpp  main  main.cpp  reaction_network.sublime-project  reaction_network.sublime-workspace  test
include/: BoundaryConditions.hpp  BvpOde.hpp  BvpPde.hpp  CoupledPde.hpp  FiniteDifferenceGrid.hpp  LinearSolver.hpp  Node.hpp  Runge-Kutta.hpp
libs/gnuplot/: example
sources/: BvpOde.cpp  FiniteDifferenceGrid.cpp
src/: BoundaryConditions.cpp  BvpOde.cpp  BvpPde.cpp  CoupledPde.cpp  FiniteDifferenceGrid.cpp  LinearSolver.cpp  SecondOrderOde.cpp  main.cpp
src/tests/: .gitignore  tests.cpp
tests/: Bvp1D.cpp  Bvp2D.cpp  test.cpp  tests.cpp
